[gd_scene load_steps=10 format=3 uid="uid://bmbuv0b042djy"]

[ext_resource type="Theme" uid="uid://ymm1n4k8ahab" path="res://ui/ui_theme.tres" id="1_oxrfp"]
[ext_resource type="Script" uid="uid://bembsmyspeqdj" path="res://world/interactable/computer/recipes/open_recipe_app_scene.gd" id="2_oxrfp"]
[ext_resource type="Texture2D" uid="uid://cwps3akwx0brn" path="res://images/objects.png" id="3_1hr5s"]
[ext_resource type="StyleBox" uid="uid://bdkk47742j3ol" path="res://ui/9_patch_stylebox_white.tres" id="3_k2g5w"]
[ext_resource type="FontFile" uid="uid://cxnoipmvnvnbx" path="res://ui/RobotoMono-Bold.ttf" id="3_wowg2"]
[ext_resource type="PackedScene" uid="uid://blv8ydpuxesd3" path="res://world/interactable/computer/recipes/ItemPanel.tscn" id="4_7fpxw"]

[sub_resource type="LabelSettings" id="LabelSettings_oxrfp"]
font = ExtResource("3_wowg2")
font_size = 24

[sub_resource type="AtlasTexture" id="AtlasTexture_k2g5w"]
atlas = ExtResource("3_1hr5s")
region = Rect2(96, 0, 16, 16)

[sub_resource type="LabelSettings" id="LabelSettings_tyadx"]
font_size = 18

[node name="OpenRecipeApp" type="ScrollContainer"]
custom_minimum_size = Vector2(750, 540)
offset_right = 750.0
offset_bottom = 507.0
theme = ExtResource("1_oxrfp")
script = ExtResource("2_oxrfp")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="RecipeName" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Cucumber Maki"
label_settings = SubResource("LabelSettings_oxrfp")
horizontal_alignment = 1

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/VBoxContainer/CenterContainer"]
layout_mode = 2
theme_override_styles/panel = ExtResource("3_k2g5w")

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/CenterContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="RecipeTexture" type="TextureRect" parent="MarginContainer/VBoxContainer/CenterContainer/PanelContainer/MarginContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 128)
layout_mode = 2
texture = SubResource("AtlasTexture_k2g5w")
expand_mode = 3
stretch_mode = 5

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 16
theme_override_constants/margin_bottom = 16

[node name="Description" type="RichTextLabel" parent="MarginContainer/VBoxContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/normal_font_size = 18
bbcode_enabled = true
text = "[color=green]Cucumber maki[/color] is... lorem ipsum etc"
fit_content = true
autowrap_mode = 2
horizontal_alignment = 1

[node name="Ingredients" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Ingredients:"
label_settings = SubResource("LabelSettings_tyadx")

[node name="IngredientsContainer" type="HFlowContainer" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="Recipe" parent="MarginContainer/VBoxContainer/IngredientsContainer" instance=ExtResource("4_7fpxw")]
layout_mode = 2
size_flags_horizontal = 1
